# LNN

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
examples/double_pendulum/: data.py  train.py
examples/hyperopt/: HyperparameterSearch.py
lnn/: __init__.py  models.py
notebooks/: BestInitialization.ipynb  BestInitialization.py  DoublePendulum-Baseline.ipynb  DoublePendulum.ipynb  HyperparameterSearch.ipynb  LNN_Tutorial.ipynb  SpecialRelativity-HNN-CorrectP.ipynb  SpecialRelativity-HNN.ipynb  SpecialRelativity.ipynb  auto_trainer.py
python/: SpecialRelativity.py
tests/: test_lnn.py
